Edited wiki page through web user interface.

--- a/wiki/DocumentationNotes.wiki
+++ b/wiki/DocumentationNotes.wiki
@@ -7,5 +7,5 @@
 
 = Details =
 
-Во-первых, наверное, приходится таблица Альтшуллера, использованная в программе.
+Во-первых, наверное, пригодится таблица Альтшуллера, использованная в программе.
 Во-вторых, те файлы, которые есть, нужно поименовать по-английский (сейчас скачать доки не возможно).
