Edited wiki page through web user interface.

--- a/wiki/DocumentationNotes.wiki
+++ b/wiki/DocumentationNotes.wiki
@@ -8,4 +8,4 @@
 = Details =
 
 Во-первых, наверное, пригодится таблица Альтшуллера, использованная в программе.
-Во-вторых, те файлы, которые есть, нужно поименовать по-английский (сейчас скачать доки не возможно).
+Во-вторых, те файлы, которые есть, нужно именовать по-английский (сейчас скачать доки невозможно).
